; ModuleID = '/home/carl/AnghaBench/radare2/libr/lang/extr_pc.c_lang_c_run.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/lang/extr_pc.c_lang_c_run.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c".tmp.c\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"w\00", align 1
@.str.2 = private unnamed_addr constant [77 x i8] c"#include <r_core.h>\0A\0Avoid entry(RCore *core, int argc, const char **argv) {\0A\00", align 1
@.str.3 = private unnamed_addr constant [4 x i8] c"\0A}\0A\00", align 1
@.str.4 = private unnamed_addr constant [20 x i8] c"Cannot open .tmp.c\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32)* @lang_c_run to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lang_c_run(i32* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = call i32* @r_sandbox_fopen(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  store i32* %8, i32** %7, align 8
  %9 = load i32*, i32** %7, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %24

11:                                               ; preds = %3
  %12 = load i32*, i32** %7, align 8
  %13 = call i32 @fputs(i8* getelementptr inbounds ([77 x i8], [77 x i8]* @.str.2, i64 0, i64 0), i32* %12)
  %14 = load i8*, i8** %5, align 8
  %15 = load i32*, i32** %7, align 8
  %16 = call i32 @fputs(i8* %14, i32* %15)
  %17 = load i32*, i32** %7, align 8
  %18 = call i32 @fputs(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0), i32* %17)
  %19 = load i32*, i32** %7, align 8
  %20 = call i32 @fclose(i32* %19)
  %21 = load i32*, i32** %4, align 8
  %22 = call i32 @lang_c_file(i32* %21, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %23 = call i32 @r_file_rm(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  br label %26

24:                                               ; preds = %3
  %25 = call i32 @eprintf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.4, i64 0, i64 0))
  br label %26

26:                                               ; preds = %24, %11
  ret i32 1
}

declare dso_local i32* @r_sandbox_fopen(i8*, i8*) #1

declare dso_local i32 @fputs(i8*, i32*) #1

declare dso_local i32 @fclose(i32*) #1

declare dso_local i32 @lang_c_file(i32*, i8*) #1

declare dso_local i32 @r_file_rm(i8*) #1

declare dso_local i32 @eprintf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
